fix: footer font on tablet width

--- a/src/style.css
+++ b/src/style.css
@@ -554,7 +554,6 @@ footer {
 
   footer {
     padding: 10px;
-    font-size: 14px;
   }
 }
 
